no-jira: refactoring/tidying some code